# Myrmidon

./: BENCHMARKS.md  Cargo.toml  FEAT.md  README.md  build.rs  index.js  package.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
iris/: __init__.py
myrmidon/: __init__.py
src/: buffer.rs  lib.rs  mailbox.rs  network.rs  node.rs  pid.rs  py.rs  registry.rs  scheduler.rs  supervisor.rs
tests/: benchmark_mbox.py  benchmark_pure_py.py  hotsw_breaker.py  integration_test.rs  pyo3_exit_reasons.rs  pyo3_hot_swap.rs  pyo3_mailbox.rs  pyo3_membrane.rs  pyo3_net_discovery.rs  pyo3_net_monitor.rs  pyo3_network.rs  pyo3_path_supervisors.rs  pyo3_phase7.rs  pyo3_registry.rs  pyo3_registry2.rs  pyo3_release_gil.rs  pyo3_restart_all_path_supervisors.rs  pyo3_restart_path_supervisors.rs  pyo3_runtime.rs  pyo3_selective_recv.rs  pyo3_timers.rs  pyo3_zero_copy.rs  supervision_paths.rs  test.js  test_100k.py  test_discovery.py  test_distribution.py  test_distribution_self_healing.py  test_hotswap.py  test_hotswap2.py  test_mbox100k.py  test_node100k.js  test_path_supervisors.py  test_paths.py  test_release_gil.py  test_restart_all_path_supervisors.py  test_restart_path_supervisors.py
