[package]
name = "myrmidon"
version = "0.1.2"
edition = "2021"
description = "Myrmidon — embedded actor mesh"
license = "AGPL-3.0"
repository = "https://github.com/SSL-ACTX/myrmidon"

[lib]
name = "myrmidon"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
dashmap = "5"
parking_lot = "0.12"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }
once_cell = "1"
crossbeam-channel = "0.5"

# Python (Optional)
pyo3 = { version = "0.19.2", optional = true }
pyo3-asyncio = { version = "0.19", features = ["tokio-runtime"], optional = true }

# Node.js (Optional)
napi = { version = "2.14", default-features = false, features = ["napi4", "tokio_rt", "async"] , optional = true }
napi-derive = { version = "2.14", optional = true }

[build-dependencies]
napi-build = { version = "2.0", optional = true }

[features]
default = ["pyo3"]
pyo3 = ["dep:pyo3", "dep:pyo3-asyncio"]
node = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[dev-dependencies]
futures = "0.3"
tracing-subscriber = "0.3"
pyo3 = { version = "0.19.2", features = ["auto-initialize"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true